// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectGroup Component snapshots basic snapshot 1`] = `
<div
  className="student-filters"
>
  <Form.Group
    controlId="group id"
  >
    <Form.Label>
      Group Label
    </Form.Label>
    <Form.Control
      as="select"
      disabled={false}
      onChange={[MockFunction props.onChange]}
      value="group VALUE"
    >
      <option
        key="opt1"
        value="opt1"
      >
        Option 1
      </option>
      <option
        key="opt2"
        value="opt2"
      >
        Option 2
      </option>
      <option
        key="opt3"
        value="opt3"
      >
        Option 3
      </option>
    </Form.Control>
  </Form.Group>
</div>
`;

exports[`SelectGroup Component snapshots disabled 1`] = `
<div
  className="student-filters"
>
  <Form.Group
    controlId="group id"
  >
    <Form.Label>
      Group Label
    </Form.Label>
    <Form.Control
      as="select"
      disabled={true}
      onChange={[MockFunction props.onChange]}
      value="group VALUE"
    >
      <option
        key="opt1"
        value="opt1"
      >
        Option 1
      </option>
      <option
        key="opt2"
        value="opt2"
      >
        Option 2
      </option>
      <option
        key="opt3"
        value="opt3"
      >
        Option 3
      </option>
    </Form.Control>
  </Form.Group>
</div>
`;
